Fix Spacing

--- a/main.css
+++ b/main.css
@@ -138,8 +138,7 @@ body {
     color: black;
     text-transform: uppercase;
     font-weight: 700;
-    letter-spacing: 1px;
-    margin-bottom: 10px;
+    margin-bottom: 1em;
     text-align: center;
     /*border: solid black 1px;*/
     width: 100%;
